--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@
                 <div class="flex items-center gap-4">
                     <a href="https://linkedin.com/in/aadiil" target="_blank" aria-label="LinkedIn" class="text-slate-400 hover:text-cyan-400 hover:scale-110 transition-all"><i data-lucide="linkedin" class="w-8 h-8"></i></a>
                     <a href="https://github.com/aadilll2121" target="_blank" aria-label="GitHub" class="text-slate-400 hover:text-cyan-400 hover:scale-110 transition-all"><i data-lucide="github" class="w-8 h-8"></i></a>
+                    <a href="https://wa.me/qr/L3UJL3DSFR7PH1" target="_blank" aria-label="WhatsApp" class="text-slate-400 hover:text-cyan-400 hover:scale-110 transition-all">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>
+                    </a>
+                    <a href="https://t.me/aadil_6355" target="_blank" aria-label="Telegram" class="text-slate-400 hover:text-cyan-400 hover:scale-110 transition-all"><i data-lucide="send" class="w-8 h-8"></i></a>
+                    <a href="https://www.instagram.com/aadil_6355?utm_source=qr&igsh=MXJtdjBnNzB6b2dsZA==" target="_blank" aria-label="Instagram" class="text-slate-400 hover:text-cyan-400 hover:scale-110 transition-all"><i data-lucide="instagram" class="w-8 h-8"></i></a>
                 </div>
             </div>
         </section>
@@ -313,7 +318,15 @@
             <h3 class="text-2xl font-bold text-white mb-2">Let's Connect</h3>
             <p class="mb-4">Feel free to reach out for opportunities or just to chat.</p>
             <a href="mailto:22ee074@bvmengineering.ac.in" class="text-lg font-semibold text-cyan-400 hover:text-cyan-300 transition-colors">22ee074@bvmengineering.ac.in</a>
-            <div class="mt-6 flex justify-center gap-6"><a href="https://linkedin.com/in/aadiil" target="_blank" aria-label="LinkedIn" class="text-slate-400 hover:text-white"><i data-lucide="linkedin" class="w-6 h-6"></i></a><a href="https://github.com/aadilll2121" target="_blank" aria-label="GitHub" class="text-slate-400 hover:text-white"><i data-lucide="github" class="w-6 h-6"></i></a></div>
+            <div class="mt-6 flex justify-center gap-6">
+                <a href="https://linkedin.com/in/aadiil" target="_blank" aria-label="LinkedIn" class="text-slate-400 hover:text-white"><i data-lucide="linkedin" class="w-6 h-6"></i></a>
+                <a href="https://github.com/aadilll2121" target="_blank" aria-label="GitHub" class="text-slate-400 hover:text-white"><i data-lucide="github" class="w-6 h-6"></i></a>
+                <a href="https://wa.me/qr/L3UJL3DSFR7PH1" target="_blank" aria-label="WhatsApp" class="text-slate-400 hover:text-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>
+                </a>
+                <a href="https://t.me/aadil_6355" target="_blank" aria-label="Telegram" class="text-slate-400 hover:text-white"><i data-lucide="send" class="w-6 h-6"></i></a>
+                <a href="https://www.instagram.com/aadil_6355?utm_source=qr&igsh=MXJtdjBnNzB6b2dsZA==" target="_blank" aria-label="Instagram" class="text-slate-400 hover:text-white"><i data-lucide="instagram" class="w-6 h-6"></i></a>
+            </div>
             <p class="text-sm text-slate-500 mt-8">&copy; 2024 Aadil Vahora. All Rights Reserved.</p>
         </div>
     </footer>
