--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
@@ -169,7 +170,7 @@
             <p class="mt-8 text-lg text-slate-400 max-w-2xl mx-auto animated-item" data-delay="100">
                 A passionate engineer with hands-on experience in EV technology, power systems, and circuit design. Eager to apply my technical knowledge to solve real-world challenges.
             </p>
-            <div class="mt-10 flex justify-center items-center gap-6 animated-item" data-delay="200">
+            <div class="mt-10 flex flex-col justify-center items-center gap-6 animated-item" data-delay="200">
                 <a href="mailto:22ee074@bvmengineering.ac.in" class="bg-cyan-600 text-white px-8 py-3 rounded-lg text-lg font-semibold hover:bg-cyan-700 transition-transform hover:scale-105">Contact Me</a>
                 <div class="flex items-center gap-4">
                     <a href="https://linkedin.com/in/aadiil" target="_blank" aria-label="LinkedIn" class="text-slate-400 hover:text-cyan-400 hover:scale-110 transition-all"><i data-lucide="linkedin" class="w-8 h-8"></i></a>
@@ -407,4 +408,3 @@
     </script>
 </body>
 </html>
-
