--- a/index.html
+++ b/index.html
@@ -487,6 +487,28 @@
                 </div>
 
                 <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
+                    <!-- Project Card 0: ETAP (In Progress) - SPANS FULL WIDTH -->
+                    <div class="glass-panel rounded-2xl overflow-hidden hover-card reveal relative md:col-span-2">
+                        <!-- Badge for In Progress -->
+                        <div class="absolute top-4 right-4 px-3 py-1 bg-yellow-500/20 text-yellow-600 dark:text-yellow-400 text-xs font-bold rounded-full border border-yellow-500/50 z-10 animate-pulse">
+                            IN PROGRESS
+                        </div>
+                        <div class="h-48 bg-gradient-to-br from-slate-100 to-slate-200 dark:from-slate-800 dark:to-slate-900 flex items-center justify-center border-b border-slate-200 dark:border-slate-700 relative group">
+                            <div class="absolute inset-0 bg-cyan-500/10 opacity-0 group-hover:opacity-100 transition-opacity"></div>
+                            <i data-lucide="activity" class="w-16 h-16 text-cyan-600 dark:text-cyan-400 group-hover:scale-110 transition-transform duration-500"></i>
+                        </div>
+                        <div class="p-8">
+                            <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-3">Industrial Power System Studies</h3>
+                            <div class="flex gap-2 mb-4 text-xs font-mono">
+                                <span class="px-2 py-1 bg-slate-200 dark:bg-slate-700 rounded text-slate-700 dark:text-cyan-300">ETAP</span>
+                                <span class="px-2 py-1 bg-slate-200 dark:bg-slate-700 rounded text-slate-700 dark:text-cyan-300">Power Analysis</span>
+                            </div>
+                            <p class="text-slate-600 dark:text-slate-400 mb-6">
+                                Currently executing at Elcon Engineers Pvt. Ltd., this project involves developing comprehensive ETAP models for industrial distribution networks. Key activities include conducting Load Flow, Short Circuit, and Arc Flash analysis to validate protection schemes and ensure system stability.
+                            </p>
+                        </div>
+                    </div>
+
                     <!-- Project Card 1: Open Loop -->
                     <div class="glass-panel rounded-2xl overflow-hidden hover-card reveal">
                         <div class="h-48 bg-gradient-to-br from-slate-100 to-slate-200 dark:from-slate-800 dark:to-slate-900 flex items-center justify-center border-b border-slate-200 dark:border-slate-700 relative group">
@@ -678,7 +700,7 @@
         animate();
 
         // --- 4. Advanced Typewriter Effect ---
-        const phrases = ["Electrical Engineer.", "EV Enthusiast.", "Energized by Power Systems"];
+        const phrases = ["Electrical Engineer.", "EV Enthusiast.", "Circuit Designer."];
         const typeEl = document.getElementById('typewriter');
         let phraseIndex = 0;
         let charIndex = 0;
@@ -745,4 +767,3 @@
     </script>
 </body>
 </html>
-
