--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
         animate();
 
         // --- 4. Advanced Typewriter Effect ---
-        const phrases = ["Electrical Engineer.", "EV Enthusiast.", "Circuit Designer."];
+        const phrases = ["Electrical Engineer.", "EV Enthusiast.", "Energized by Power Systems."];
         const typeEl = document.getElementById('typewriter');
         let phraseIndex = 0;
         let charIndex = 0;
@@ -767,3 +767,4 @@
     </script>
 </body>
 </html>
+
