--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
                 <p class="max-w-2xl mx-auto text-slate-600 dark:text-slate-400 text-lg mb-10 leading-relaxed reveal">
                     Bridging the gap between electrical systems and modern technology. 
-                    Specializing in <span class="text-slate-900 dark:text-white font-medium">EV Architecture</span>, <span class="text-slate-900 dark:text-white font-medium">Power Electronics</span>, and <span class="text-slate-900 dark:text-white font-medium">Circuit Simulation</span>.
+                    Specializing in <span class="text-slate-900 dark:text-white font-medium">EV Architecture</span>, <span class="text-slate-900 dark:text-white font-medium">Power Electronics</span>, and <span class="text-slate-900 dark:text-white font-medium">Power System Study</span>.
                 </p>
 
                 <div class="flex flex-col md:flex-row justify-center items-center gap-4 reveal">
@@ -767,4 +767,5 @@
     </script>
 </body>
 </html>
+
 
