--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+npm i @vercel/speed-insights
+import { SpeedInsights } from "@vercel/speed-insights/next"
+
+
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth dark">
 <head>
@@ -767,5 +771,6 @@
     </script>
 </body>
 </html>
+
 
 
