--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                                 <h3 class="text-xl font-bold text-slate-900 dark:text-white mt-1">Summer Intern</h3>
                                 <p class="text-slate-600 dark:text-slate-400 text-sm mb-3">Akaaish Mechatronics (Elecon Unit)</p>
                                 <p class="text-slate-600 dark:text-slate-400 text-sm leading-relaxed text-left md:text-right">
-                                    Learned basics of substations including transformers, motors, and switchgear components.
+                                  Gained practical exposure to 66/11kV Substation layouts, specifically analyzing Transformers, Circuit Breakers, and Isolator operations.
                                 </p>
                             </div>
                             <div class="hidden md:block md:w-[45%]"></div> <!-- Spacer -->
@@ -701,7 +701,7 @@
         animate();
 
         // --- 4. Advanced Typewriter Effect ---
-        const phrases = ["Electrical Engineer.", "EV Enthusiast.", "Energized by Power Systems."];
+        const phrases = ["Electrical Engineer.", "Focused on Rotating Machines & Power Conversion.", "Energized by Power Systems."];
         const typeEl = document.getElementById('typewriter');
         let phraseIndex = 0;
         let charIndex = 0;
@@ -768,6 +768,7 @@
     </script>
 </body>
 </html>
+
 
 
 
