--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                                 <div class="space-y-4">
                                     <div class="border-l-2 border-cyan-500 pl-4">
                                         <h4 class="font-semibold text-slate-800 dark:text-slate-200">Diploma in Programming Languages</h4>
-                                        <p class="text-sm text-slate-500 dark:text-slate-400">Information Technology Center, Mogri (Oct 2024 - Feb 2025)</p>
+                                        <p class="text-sm text-slate-500 dark:text-slate-400">Information Technology Center, Mogri (October 2024 - February 2025)</p>
                                     </div>
                                     <div class="border-l-2 border-cyan-500 pl-4">
                                         <h4 class="font-semibold text-slate-800 dark:text-slate-200">AutoCAD Electrical</h4>
@@ -424,7 +424,7 @@
                             
                             <!-- Content Box -->
                             <div class="ml-10 md:ml-0 md:w-[45%] md:mr-auto glass-panel p-6 rounded-xl hover-card md:text-right">
-                                <span class="text-cyan-600 dark:text-cyan-400 font-mono text-sm">Dec 2025 - Present</span>
+                                <span class="text-cyan-600 dark:text-cyan-400 font-mono text-sm">December 2025 - Present</span>
                                 <h3 class="text-xl font-bold text-slate-900 dark:text-white mt-1">Project Intern</h3>
                                 <p class="text-slate-600 dark:text-slate-400 text-sm mb-3">Elcon Engineers Pvt. Ltd., Vadodara</p>
                                 <ul class="text-slate-600 dark:text-slate-400 text-sm leading-relaxed list-none space-y-2 text-left md:text-right">
@@ -444,7 +444,7 @@
                             
                             <!-- Content Box -->
                             <div class="ml-10 md:ml-0 md:w-[45%] md:ml-auto glass-panel p-6 rounded-xl hover-card">
-                                <span class="text-cyan-600 dark:text-cyan-400 font-mono text-sm">June 2025</span>
+                                <span class="text-cyan-600 dark:text-cyan-400 font-mono text-sm">June 2025 - July 2025</span>
                                 <h3 class="text-xl font-bold text-slate-900 dark:text-white mt-1">EV Technology Intern</h3>
                                 <p class="text-slate-600 dark:text-slate-400 text-sm mb-3">BVM Engg. College (IEI Organized)</p>
                                 <ul class="text-slate-600 dark:text-slate-400 text-sm leading-relaxed list-disc pl-5 space-y-2">
@@ -768,6 +768,7 @@
     </script>
 </body>
 </html>
+
 
 
 
